MO2-1809 : Alignment issues in question 4 : Fixed

--- a/src/app/portfolio/risk-assessment/risk-assessment.component.scss
+++ b/src/app/portfolio/risk-assessment/risk-assessment.component.scss
@@ -57,6 +57,7 @@ app-risk-assessment {
 
   .table-view {
     display: table;
+    position: relative;
     .table-row {
       display: table-row;
       .table-cell {
